--- a/brightly-salty-github-io.cabal
+++ b/brightly-salty-github-io.cabal
@@ -7,5 +7,7 @@ executable site
   main-is:          site.hs
   build-depends:    base == 4.*
                   , hakyll == 4.15.*
+                  , text
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
+  other-modules:    Slug
