Remove unnecessary css file and switch to using local crowbook copy

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ all: orthodoxy the-free-press guilds-trade servile-state utopia-usurers
 
 %: common.book %.book ./%/*.md
 	-mkdir -p ../books/$@
-	crowbook $@.book
+	../crowbook/target/release/crowbook $@.book
 
 clean:
 	-rm -r ../books
