Publish "Agrarian Justice" by Thomas Paine

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,9 @@
 %: common.book %/__.book %/*.md
 	-mkdir -p ../books/$@
-	../crowbook/target/release/crowbook ../src/$@/__.book
+	../crowbook/target/release/crowbook $@/__.book
 	ebook-convert ../books/$@.epub ../books/$@.mobi
-	cleancss ../books/$@/stylesheet.css -o ../books/$@/stylesheet.min.css
-	mv ../books/$@/stylesheet.min.css ../books/$@/stylesheet.css
-	cleancss ../books/$@/print.css -o ../books/$@/print.min.css
-	mv ../books/$@/print.min.css ../books/$@/print.css
+	-cleancss ../books/$@/stylesheet.css -o stylesheet.min.css && mv stylesheet.min.css ../books/$@/stylesheet.css
+	-cleancss ../books/$@/print.css -o print.min.css && mv print.min.css ../books/$@/print.css
 
 clean:
 	-rm -r ../books
