Publish "A Guildman's Interpretation of History" by Arthur Penty

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,5 @@
+all: agrarian-justice christianity-patriotism economic-democracy flight-from-city guilds-trade guildsman-history napoleon-notting orthodoxy outline-sanity restoration-guild saw-america servile-state the-free-press utopia-usurers
+
 %: common.book %/__.book %/*.md
 	-mkdir -p ../books/$@
 	crowbook $@/__.book
