--- a/brightly-salty-github-io.cabal
+++ b/brightly-salty-github-io.cabal
@@ -9,5 +9,6 @@ executable site
                   , hakyll == 4.15.*
                   , filepath
                   , split
+                  , aeson
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
