--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-all: acquisitive-society agrarian-justice christianity-patriotism condition-labor control-distribution economic-democracy economics-helen flight-from-city guilds-trade guildsman-history kingdom-within man-thursday napoleon-notting orthodoxy outline-sanity restoration-guild saw-america servile-state social-problems st-francis the-free-press utopia-usurers whats-wrong
+all: acquisitive-society agrarian-justice christianity-patriotism condition-labor control-distribution economic-democracy economics-helen flight-from-city garrison-nonresistance guilds-trade guildsman-history kingdom-within man-thursday napoleon-notting orthodoxy outline-sanity restoration-guild saw-america servile-state social-problems st-francis the-free-press utopia-usurers whats-wrong
 
 %: common.book %/__.book %/*.md
 	-mkdir -p ../books/$@
